Addresses comments in PR